# sherpa

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
sherpa/: auditor.py  config.py  context.py  llm_client.py  main.py  producer.py  schema.py
sherpa/sources/: __init__.py  arxiv.py  hackernews.py  wikipedia.py
tests/: conftest.py  fixtures.py  test_auditor.py  test_context.py  test_e2e.py  test_loop.py  test_producer.py
tests/test_sources/: test_arxiv.py  test_hackernews.py  test_wikipedia.py
