[project]
name = "research-agent"
version = "0.1.0"
description = "Self-healing evidence-backed research agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
groq = ["groq>=0.9"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["groq>=0.9", "openai>=1.0", "anthropic>=0.40"]

[project.scripts]
sherpa = "sherpa.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sherpa"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "groq>=0.9",
    "black>=24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
